--- a/Creditz-Angular-src/app/applicant-profile/applicant-profile.component.html
+++ b/Creditz-Angular-src/app/applicant-profile/applicant-profile.component.html
@@ -44,9 +44,9 @@
                     </div>
                 </div>
                 <div class="col-md-8">
-                     <div class="tab-content profile-tab">
+                      <div class="tab-content profile-tab">
                         <h4 class="nav-item"> Personal Information</h4>
-                        <div class="tab-pane fade show active" role="tabpanel" aria-labelledby="home-tab">
+                        <!-- <div class="tab-pane fade show active" role="tabpanel" aria-labelledby="home-tab"> -->
                                     
     
                                         <div class="row">
@@ -100,7 +100,7 @@
                                     </div>
                         </div>
 
-                    </div>
+                    <!-- <!-- </div> -->
                 </div>
             </div>
         </form>           
@@ -158,7 +158,7 @@
                     <div class="col-md-8">
                         <div class="tab-content profile-tab">
                             <h4 class="nav-item"> Organization Information</h4>
-                            <div class="tab-pane fade show active" role="tabpanel" aria-labelledby="home-tab">
+                            <!-- <div class="tab-pane fade show active" role="tabpanel" aria-labelledby="home-tab"> -->
                                         
         
                                             <div class="row">
@@ -220,7 +220,7 @@
                                         </div>
                             </div>
                            
-                        </div>
+                        <!-- </div> -->
                     </div>
                 </div>
             </form>           
